--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-    <h1>todo list</h1>
-    <input type="text" class="input">
-    <button class="add">add</button>
-    <div class="list">
-
+    <div class="todo__body">
+        <div class="todo__add">
+            <input class="todo__input" type="text" placeholder="your todo">
+            <button class="todo__button">add</button>
+        </div>
+        <div class="todo__list">
+        </div>
     </div>
 </body>
 
