--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,7 @@
 </head>
 
 <body>
-    <div class="todo__body">
-        <div class="todo__add">
-            <input class="todo__input" type="text" placeholder="your todo">
-            <button class="todo__button">add</button>
-        </div>
-        <div class="todo__list">
-        </div>
-    </div>
+    <div id="root"></div>
 </body>
 
 </html>
