added deletion action

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,15 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Todo</title><script defer="defer" src="mainf0ebfb35fa3e59f35138.js"></script><link href="styles.7f05ef8d2c8bf33fa57c.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Todo</title>
+<script defer src="main1242491e1bc3fbb0d3fe.js"></script><link href="styles.3f90caf8a9bd9832efc0.css" rel="stylesheet"></head>
+
+<body>
+    <div id="root"></div>
+</body>
+
+</html>
