--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo</title>
-<script defer src="maind03db80217e3ac18d1a8.js"></script><link href="styles.3287aeb910e1c880e288.css" rel="stylesheet"></head>
-
-<body>
-    <div id="root"></div>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Todo</title><script defer="defer" src="main90cf986eae66c538fbaa.js"></script><link href="styles.00dd5629b29f007c2f92.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
